# v8-load-js-file

./: CMakeLists.txt  README.md  main.cpp
test/: app.js  test.js
